--- a/complicated/config.html
+++ b/complicated/config.html
@@ -40,7 +40,7 @@
         </div>
         <div id="canvas-container">
             <canvas id="previewCanvas" width="200" height="228"></canvas>
-	*items are active and correctly aligned only on the watch
+	*Items are active and correctly aligned only on the watch
         </div>
         <div class="slot-column">
             <select id="slot_R1"></select>
@@ -65,7 +65,7 @@
             <div class="color-preview" id="side_bg_preview"></div>
         </div>
         <div class="config-item">
-		Note: Dark colors are on B/W watches as 50% dither
+		*Dark colors are on B/W watches as 50% dither
         </div>
     </fieldset>
 
@@ -419,4 +419,5 @@ function hexToInt(c) {
 
 </script>
 </body>
+
 </html>
