zase opravené obrázky

--- a/complicated/config.html
+++ b/complicated/config.html
@@ -141,8 +141,8 @@ const CONFIG = {
         hours: 'hodiny.png', 
         minutes: 'minuty.png',
         day_double: 'miniblok.png',
-        seconds_double: 'miniblok.png',
-        timezone_double: 'miniblok.png',
+        seconds_double: 'seconds.png',
+        timezone_double: 'timezone.png',
         steps: 'kroky.png', hrm: 'tep.png', weather: 'pocasi.png', battery: 'baterie.png',
         bluetooth: 'bluetooth.png',
         ampm: 'ampm.png', dow: 'dayofweek.png', month: 'month.png',
