--- a/complicated/config.html
+++ b/complicated/config.html
@@ -106,7 +106,7 @@
             </select>
         </div>
          <div class="config-item">
-            <label for="invert">Invert Colors</label>
+            <label for="invert">Invert Colors on B/W</label>
             <input type="checkbox" id="invert" style="width:20px; height:20px;">
         </div>
         <div class="config-item">
@@ -488,4 +488,5 @@ function hexToInt(c) {
 
 </script>
 </body>
+
 </html>
