added Num Month

--- a/complicated/config.html
+++ b/complicated/config.html
@@ -150,6 +150,7 @@ const CONFIG = {
         day_double: 'miniblok.png',
         seconds_double: 'seconds.png',
         timezone_double: 'timezone.png',
+        nummonth_double: 'timezone.png',
         steps: 'kroky.png', hrm: 'tep.png', weather: 'pocasi.png', battery: 'baterie.png',
         bluetooth: 'bluetooth.png',
         ampm: 'ampm.png', dow: 'dayofweek.png', month: 'month.png',
@@ -179,7 +180,7 @@ const CONFIG = {
         LOC_STEPS: 20, LOC_HRM: 21, LOC_WEATHER: 22, LOC_BATT: 23,
         LOC_BLUETOOTH: 24, LOC_AMPM: 25, LOC_DOW: 26, LOC_DAY: 27,
         LOC_MONTH: 28, LOC_SECONDS: 29, LOC_TIMEZONE: 30,
-        HH_BG: 31, MM_BG: 32, SIDE_BG: 34,// ZMĚNA: Nový klíč pouze pro potřeby HTML konfigurace
+        HH_BG: 31, MM_BG: 32, SIDE_BG: 34, LOC_NUMMONTH: 35,// ZMĚNA: Nový klíč pouze pro potřeby HTML konfigurace
         TIMEZONE_NAME: 100
     }
 };
@@ -203,7 +204,9 @@ const complication_types = {
     month: { name: 'Month', key: CONFIG.keys.LOC_MONTH, isDouble: false, isTinted: false },
     day_double: { name: 'Date', key: CONFIG.keys.LOC_DAY, isDouble: true, isTinted: true },
     seconds_double: { name: 'Seconds', key: CONFIG.keys.LOC_SECONDS, isDouble: true, isTinted: true },
+    nummonth_double: { name: 'Month number', key: CONFIG.keys.LOC_NUMMONTH, isDouble: true, isTinted: true },
     timezone_double: { name: 'Timezone', key: CONFIG.keys.LOC_TIMEZONE, isDouble: true, isTinted: true },
+    
 };
 
 const offscreenCanvas = document.createElement('canvas');
