--- a/complicated/config.html
+++ b/complicated/config.html
@@ -202,7 +202,7 @@ const complication_types = {
     ampm: { name: 'AM/PM', key: CONFIG.keys.LOC_AMPM, isDouble: false, isTinted: false },
     dow: { name: 'Day of Week', key: CONFIG.keys.LOC_DOW, isDouble: false, isTinted: false },
     month: { name: 'Month', key: CONFIG.keys.LOC_MONTH, isDouble: false, isTinted: false },
-    day_double: { name: 'Date', key: CONFIG.keys.LOC_DAY, isDouble: true, isTinted: true },
+    day_double: { name: 'Day number', key: CONFIG.keys.LOC_DAY, isDouble: true, isTinted: true },
     seconds_double: { name: 'Seconds', key: CONFIG.keys.LOC_SECONDS, isDouble: true, isTinted: true },
     nummonth_double: { name: 'Month number', key: CONFIG.keys.LOC_NUMMONTH, isDouble: true, isTinted: true },
     timezone_double: { name: 'Timezone', key: CONFIG.keys.LOC_TIMEZONE, isDouble: true, isTinted: true },
