--- a/complicated/config.html
+++ b/complicated/config.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-    <h1>Watchface Settings</h1>
+    <h1>BlockFace Settings</h1>
 
     <div id="main-container">
         <div class="slot-column">
